--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>Vasiliev Movie App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need meow meow to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
